# Gova

./: Dockerfile  Projects.md  docker-compose.yml  readme.md
PasswordManagerWithRust/password_manager/: Cargo.toml  passwords.enc
PasswordManagerWithRust/password_manager/src/: main.rs
RUST-API/: project.md  (+1 more)
RUST-API/userspace/: .env.example  Cargo.toml  Dockerfile  Rocket.toml  diesel.toml  docker-compose.yml
RUST-API/userspace/.sqlx/: query-01163a21489d79143470af2dec1e98ec8e26aea67878639441eee48836633f4e.json  query-0160d099add0b6dc1b2f12107a0d1334d26f12254c539835b9dc2cc90b82e49a.json  query-0988f5ee5ec4aac337aacc5da55b4317bca73308d2f3f279388aa87505fe596c.json  query-22f88ed1f029d7aa884d5addc07a28d9b73fcf1a0b68a5cb041ba7a762a1a581.json  query-2352e840d32c5ba430a5773b2986a89e5252e704bccc1d44e5156dd0462c13c0.json  query-3470cc2c46fb8f727cfc612f238f1a06d63bedffad5e464953ff271fb13cd8f0.json  query-3b6fafa7e56221e052fab2c0ea0b99e6c21a31600eb7cae4eb92c82a2e3a04bb.json  query-42977f6168947d9a028e48fccfd8f1d91f329f7de71ba7ba402d723dfeb3f949.json  query-561444fd11c9807475a3e4647d715fe0ac6b86634fd8985d6c4013c6c6a3d8a4.json  query-5daaa682a5a81d4c035de2b1c52ff86b350cd42e686ec3e28cd2c4d19f4ee266.json  query-66f597b9ebdc7823a7b0d8c08952672081e97d898c3d80b02b9abb267eb539c7.json  query-69cad8105fd141f670e819f3d56cfc411a201df4f883705e9d3fdf27d244fbd7.json  query-6ad2c8c7dfbc4ad69f70fbfb4e9665fa491100fd1a47123060fcbaa900b763f0.json  query-742bce9ec16cdc11a8f14b30a00cf967486acba47cd77d13a8eeea81a3539870.json  query-8119067e02507f87dde92c1fc4def02527561bbf1ccea201e957cb76fc356086.json  query-8781ae75133f2741f109f764dcd49ebf16b6466103ac5f359b53cd452f093559.json  query-87f0996722a98b8257e49394f1577a1dabb9edc2b425f3274c09cdc87f8f980a.json  query-8dd9ba9d05d78cee7ddf8d471a6a9d2febd2b5c34c5419982d508fe8ae654739.json  query-90f3dd9d13d8064b5e9941e60ccff8b030c354e2dd7d46e6327e17a7c3651ae8.json  query-98b94f6d4514e573fc1d305ba9f7afdb28db1d7b27366b0d6cf8424e0fbef4e8.json  query-9e409f9fc1b33485b86e3de3b8315c6e9f59a92b08b94c9b2734509a950fd18a.json  query-bc48f38483cf03ca0a114fa8a6f3f49a885ceb8e1bfdd572d9b2874df134df24.json  query-c8e5ea1f7ebdbcca91953b2483b54c647d139968d2bac7776bb64e0ddc34082a.json  query-e3823bf166972d9d7ec1c904115d201d90ffdb1d95b488072066c5a6e96aa1c5.json  query-e51635b095db04e5f962a961eaaa7e45b1dafebe049511ea0acf9b3eb5fe3be5.json  query-e7442a3943378ab5055354e260172d6ca5cf851ec54f3351310bcf63e67a34de.json  query-e89c4dbdcdd1beb98070249bdf8ed538a1149901ae5b4eab76c28c8624ffe0d0.json  query-e8be9114465f27674c1f6546289f23bb16ff5519f0c08ebc3e29c7b45e99b77e.json  query-eec45cc2ddc23bcf30c57286f4e8dfd47b93885b4c68f76a26336ac118794aec.json
RUST-API/userspace/migrations/: 20250204160214_initial_schema.sql  (+1 more)
(+83 files in other folders)
