[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.24", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
dirs = "5.0.1"
rand = "0.8.5"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"

[target.x86_64-unknown-linux-gnu.dependencies]
libc = "0.2.169"

[target.x86_64-pc-windows-msvc.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Security", "Win32_System_Threading"] }
