[package]
name = "userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.21"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
lettre = "0.11.4"
rand = "0.8"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }