[package]
name = "userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.21"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.12"
rand = "0.8"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
